#
# BUILD.bazel
#

package(default_visibility = ["//visibility:public"])

# Startup files and libraries
# Note: Some startup files (crt1.o, crti.o) may be missing from the sysroot.
# If needed, copy them from the original sysroot.

cc_import(
  name = "IBM290",
  shared_library = "lib/gconv/IBM290.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM4971",
  shared_library = "lib/gconv/IBM4971.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM297",
  shared_library = "lib/gconv/IBM297.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM4899",
  shared_library = "lib/gconv/IBM4899.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1008_420",
  shared_library = "lib/gconv/IBM1008_420.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "png16",
  shared_library = "lib/libpng16.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "GB18030",
  shared_library = "lib/gconv/GB18030.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "SAMI-WS2",
  shared_library = "lib/gconv/SAMI-WS2.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "gcrt1",
  objects = ["lib/gcrt1.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.hwasan-x86_64",
  static_library = "lib/linux/libclang_rt.hwasan-x86_64.a",
  shared_library = "lib/linux/libclang_rt.hwasan-x86_64.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "INIS-8",
  shared_library = "lib/gconv/INIS-8.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.xray-x86_64",
  static_library = "lib/linux/libclang_rt.xray-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.xray-dso-x86_64",
  static_library = "lib/linux/libclang_rt.xray-dso-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM5347",
  shared_library = "lib/gconv/IBM5347.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM918",
  shared_library = "lib/gconv/IBM918.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "pcre2-32",
  shared_library = "lib/libpcre2-32.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.stats-x86_64",
  static_library = "lib/linux/libclang_rt.stats-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.msan_cxx-x86_64",
  static_library = "lib/linux/libclang_rt.msan_cxx-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.tysan-x86_64",
  static_library = "lib/linux/libclang_rt.tysan-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.dd-x86_64",
  static_library = "lib/linux/libclang_rt.dd-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.profile-x86_64",
  static_library = "lib/linux/libclang_rt.profile-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "UTF-32",
  shared_library = "lib/gconv/UTF-32.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM9030",
  shared_library = "lib/gconv/IBM9030.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "BrokenLocale",
  static_library = "lib/libBrokenLocale.a",
  shared_library = "lib/libBrokenLocale.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM4517",
  shared_library = "lib/gconv/IBM4517.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.ubsan_standalone-x86_64",
  static_library = "lib/linux/libclang_rt.ubsan_standalone-x86_64.a",
  shared_library = "lib/linux/libclang_rt.ubsan_standalone-x86_64.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "nss_db",
  shared_library = "lib/libnss_db.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO-2022-CN-EXT",
  shared_library = "lib/gconv/ISO-2022-CN-EXT.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "GBBIG5",
  shared_library = "lib/gconv/GBBIG5.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.memprof-x86_64",
  static_library = "lib/linux/libclang_rt.memprof-x86_64.a",
  shared_library = "lib/linux/libclang_rt.memprof-x86_64.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM891",
  shared_library = "lib/gconv/IBM891.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EBCDIC-FI-SE",
  shared_library = "lib/gconv/EBCDIC-FI-SE.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1123",
  shared_library = "lib/gconv/IBM1123.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1122",
  shared_library = "lib/gconv/IBM1122.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1124",
  shared_library = "lib/gconv/IBM1124.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "UTF-7",
  shared_library = "lib/gconv/UTF-7.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1129",
  shared_library = "lib/gconv/IBM1129.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM943",
  shared_library = "lib/gconv/IBM943.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "MAC-IS",
  shared_library = "lib/gconv/MAC-IS.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "GREEK-CCITT",
  shared_library = "lib/gconv/GREEK-CCITT.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.asan_cxx-x86_64",
  static_library = "lib/linux/libclang_rt.asan_cxx-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "unwind",
  static_library = "lib/libunwind.a",
  shared_library = "lib/libunwind.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "mvec",
  static_library = "lib/libmvec.a",
  shared_library = "lib/libmvec.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.dyndd-x86_64",
  shared_library = "lib/linux/libclang_rt.dyndd-x86_64.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO_5427-EXT",
  shared_library = "lib/gconv/ISO_5427-EXT.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.crtbegin-x86_64",
  objects = ["lib/linux/clang_rt.crtbegin-x86_64.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP932",
  shared_library = "lib/gconv/CP932.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1388",
  shared_library = "lib/gconv/IBM1388.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "anl",
  static_library = "lib/libanl.a",
  shared_library = "lib/libanl.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "T.61",
  shared_library = "lib/gconv/T.61.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "GBK",
  shared_library = "lib/gconv/GBK.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "sotruss-lib",
  shared_library = "lib/audit/sotruss-lib.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.hwasan_aliases-x86_64",
  static_library = "lib/linux/libclang_rt.hwasan_aliases-x86_64.a",
  shared_library = "lib/linux/libclang_rt.hwasan_aliases-x86_64.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM9066",
  shared_library = "lib/gconv/IBM9066.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "resolv",
  static_library = "lib/libresolv.a",
  shared_library = "lib/libresolv.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.rtsan-x86_64",
  static_library = "lib/linux/libclang_rt.rtsan-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.dfsan-x86_64",
  static_library = "lib/linux/libclang_rt.dfsan-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "KOI8-U",
  shared_library = "lib/gconv/KOI8-U.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "rcrt1",
  objects = ["lib/rcrt1.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "KOI8-T",
  shared_library = "lib/gconv/KOI8-T.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "dl",
  static_library = "lib/libdl.a",
  shared_library = "lib/libdl.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "KOI8-R",
  shared_library = "lib/gconv/KOI8-R.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "loader_attic",
  shared_library = "lib/engines-3/loader_attic.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EBCDIC-IS-FRISS",
  shared_library = "lib/gconv/EBCDIC-IS-FRISS.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.xray-basic-x86_64",
  static_library = "lib/linux/libclang_rt.xray-basic-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "unwind_shared",
  shared_library = "lib/libunwind_shared.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM939",
  shared_library = "lib/gconv/IBM939.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM933",
  shared_library = "lib/gconv/IBM933.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM932",
  shared_library = "lib/gconv/IBM932.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP10007",
  shared_library = "lib/gconv/CP10007.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.tsan-x86_64",
  static_library = "lib/linux/libclang_rt.tsan-x86_64.a",
  shared_library = "lib/linux/libclang_rt.tsan-x86_64.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM930",
  shared_library = "lib/gconv/IBM930.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM937",
  shared_library = "lib/gconv/IBM937.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM935",
  shared_library = "lib/gconv/IBM935.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO-IR-209",
  shared_library = "lib/gconv/ISO-IR-209.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "NATS-SEFI",
  shared_library = "lib/gconv/NATS-SEFI.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "MACINTOSH",
  shared_library = "lib/gconv/MACINTOSH.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EBCDIC-DK-NO",
  shared_library = "lib/gconv/EBCDIC-DK-NO.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "pcre",
  shared_library = "lib/libpcre.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "MAC-SAMI",
  shared_library = "lib/gconv/MAC-SAMI.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "DEC-MCS",
  shared_library = "lib/gconv/DEC-MCS.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ARMSCII-8",
  shared_library = "lib/gconv/ARMSCII-8.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM4909",
  shared_library = "lib/gconv/IBM4909.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "SJIS",
  shared_library = "lib/gconv/SJIS.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM16804",
  shared_library = "lib/gconv/IBM16804.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EBCDIC-FI-SE-A",
  shared_library = "lib/gconv/EBCDIC-FI-SE-A.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EUC-JP-MS",
  shared_library = "lib/gconv/EUC-JP-MS.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.fuzzer_interceptors-x86_64",
  static_library = "lib/linux/libclang_rt.fuzzer_interceptors-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "pcre2-8",
  shared_library = "lib/libpcre2-8.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "INIS",
  shared_library = "lib/gconv/INIS.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "HP-ROMAN9",
  shared_library = "lib/gconv/HP-ROMAN9.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "HP-ROMAN8",
  shared_library = "lib/gconv/HP-ROMAN8.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "LATIN-GREEK-1",
  shared_library = "lib/gconv/LATIN-GREEK-1.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM420",
  shared_library = "lib/gconv/IBM420.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM423",
  shared_library = "lib/gconv/IBM423.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.builtins-x86_64",
  static_library = "lib/linux/libclang_rt.builtins-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM424",
  shared_library = "lib/gconv/IBM424.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EBCDIC-FR",
  shared_library = "lib/gconv/EBCDIC-FR.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.asan-preinit-x86_64",
  static_library = "lib/linux/libclang_rt.asan-preinit-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "JISX0213",
  shared_library = "lib/gconv/libJISX0213.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "GOST_19768-74",
  shared_library = "lib/gconv/GOST_19768-74.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "INIS-CYRILLIC",
  shared_library = "lib/gconv/INIS-CYRILLIC.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP737",
  shared_library = "lib/gconv/CP737.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "z",
  static_library = "lib/libz.a",
  shared_library = "lib/libz.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EUC-TW",
  shared_library = "lib/gconv/EUC-TW.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.gwp_asan-x86_64",
  static_library = "lib/linux/libclang_rt.gwp_asan-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "padlock",
  shared_library = "lib/engines-3/padlock.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "m",
  static_library = "lib/libm.a",
  shared_library = "lib/libm.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "HP-TURKISH8",
  shared_library = "lib/gconv/HP-TURKISH8.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "sqlite3",
  shared_library = "lib/libsqlite3.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "g",
  static_library = "lib/libg.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "c",
  static_library = "lib/libc.a",
  shared_library = "lib/libc.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ANSI_X3.110",
  shared_library = "lib/gconv/ANSI_X3.110.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EBCDIC-ES",
  shared_library = "lib/gconv/EBCDIC-ES.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "c_nonshared",
  static_library = "lib/libc_nonshared.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISIRI-3342",
  shared_library = "lib/gconv/ISIRI-3342.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM874",
  shared_library = "lib/gconv/IBM874.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM875",
  shared_library = "lib/gconv/IBM875.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM870",
  shared_library = "lib/gconv/IBM870.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM871",
  shared_library = "lib/gconv/IBM871.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO646",
  shared_library = "lib/gconv/ISO646.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "nss_hesiod",
  shared_library = "lib/libnss_hesiod.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "orc_rt-x86_64",
  static_library = "lib/linux/liborc_rt-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "VISCII",
  shared_library = "lib/gconv/VISCII.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IEC_P27-1",
  shared_library = "lib/gconv/IEC_P27-1.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "BIG5HKSCS",
  shared_library = "lib/gconv/BIG5HKSCS.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.memprof_cxx-x86_64",
  static_library = "lib/linux/libclang_rt.memprof_cxx-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "TCVN5712-1",
  shared_library = "lib/gconv/TCVN5712-1.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.fuzzer-x86_64",
  static_library = "lib/linux/libclang_rt.fuzzer-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "MAC-UK",
  shared_library = "lib/gconv/MAC-UK.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1004",
  shared_library = "lib/gconv/IBM1004.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.fuzzer_no_main-x86_64",
  static_library = "lib/linux/libclang_rt.fuzzer_no_main-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EBCDIC-AT-DE-A",
  shared_library = "lib/gconv/EBCDIC-AT-DE-A.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1008",
  shared_library = "lib/gconv/IBM1008.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1371",
  shared_library = "lib/gconv/IBM1371.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "capi",
  shared_library = "lib/engines-3/capi.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "MIK",
  shared_library = "lib/gconv/MIK.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "GB",
  shared_library = "lib/gconv/libGB.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.msan-x86_64",
  static_library = "lib/linux/libclang_rt.msan-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO_11548-1",
  shared_library = "lib/gconv/ISO_11548-1.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.scudo_standalone_cxx-x86_64",
  static_library = "lib/linux/libclang_rt.scudo_standalone_cxx-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "xml2",
  shared_library = "lib/libxml2.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM880",
  shared_library = "lib/gconv/IBM880.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM285",
  shared_library = "lib/gconv/IBM285.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM284",
  shared_library = "lib/gconv/IBM284.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM281",
  shared_library = "lib/gconv/IBM281.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM280",
  shared_library = "lib/gconv/IBM280.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EUC-CN",
  shared_library = "lib/gconv/EUC-CN.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.hwasan-preinit-x86_64",
  static_library = "lib/linux/libclang_rt.hwasan-preinit-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "crt1",
  objects = ["lib/crt1.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EBCDIC-AT-DE",
  shared_library = "lib/gconv/EBCDIC-AT-DE.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "TSCII",
  shared_library = "lib/gconv/TSCII.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.hwasan_cxx-x86_64",
  static_library = "lib/linux/libclang_rt.hwasan_cxx-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "c++experimental",
  static_library = "lib/libc++experimental.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "RK1048",
  shared_library = "lib/gconv/RK1048.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EUC-KR",
  shared_library = "lib/gconv/EUC-KR.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EBCDIC-DK-NO-A",
  shared_library = "lib/gconv/EBCDIC-DK-NO-A.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "BRF",
  shared_library = "lib/gconv/BRF.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO_2033",
  shared_library = "lib/gconv/ISO_2033.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CSN_369103",
  shared_library = "lib/gconv/CSN_369103.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.scudo_standalone-x86_64",
  static_library = "lib/linux/libclang_rt.scudo_standalone-x86_64.a",
  shared_library = "lib/linux/libclang_rt.scudo_standalone-x86_64.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ssl",
  shared_library = "lib/libssl.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ASMO_449",
  shared_library = "lib/gconv/ASMO_449.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EUC-JISX0213",
  shared_library = "lib/gconv/EUC-JISX0213.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "thread_db",
  shared_library = "lib/libthread_db.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "UHC",
  shared_library = "lib/gconv/UHC.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM803",
  shared_library = "lib/gconv/IBM803.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO_5428",
  shared_library = "lib/gconv/ISO_5428.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "pcre2-posix",
  shared_library = "lib/libpcre2-posix.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM256",
  shared_library = "lib/gconv/IBM256.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO_5427",
  shared_library = "lib/gconv/ISO_5427.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM904",
  shared_library = "lib/gconv/IBM904.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM905",
  shared_library = "lib/gconv/IBM905.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "crti",
  objects = ["lib/crti.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM902",
  shared_library = "lib/gconv/IBM902.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "crtn",
  objects = ["lib/crtn.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM903",
  shared_library = "lib/gconv/IBM903.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.memprof-preinit-x86_64",
  static_library = "lib/linux/libclang_rt.memprof-preinit-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM901",
  shared_library = "lib/gconv/IBM901.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1025",
  shared_library = "lib/gconv/IBM1025.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO-2022-JP",
  shared_library = "lib/gconv/ISO-2022-JP.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1026",
  shared_library = "lib/gconv/IBM1026.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1154",
  shared_library = "lib/gconv/IBM1154.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1155",
  shared_library = "lib/gconv/IBM1155.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM500",
  shared_library = "lib/gconv/IBM500.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1156",
  shared_library = "lib/gconv/IBM1156.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1157",
  shared_library = "lib/gconv/IBM1157.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1153",
  shared_library = "lib/gconv/IBM1153.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "TIS-620",
  shared_library = "lib/gconv/TIS-620.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1158",
  shared_library = "lib/gconv/IBM1158.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.crtend-x86_64",
  objects = ["lib/linux/clang_rt.crtend-x86_64.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "expat",
  shared_library = "lib/libexpat.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "GREEK7",
  shared_library = "lib/gconv/GREEK7.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.ubsan_minimal-x86_64",
  static_library = "lib/linux/libclang_rt.ubsan_minimal-x86_64.a",
  shared_library = "lib/linux/libclang_rt.ubsan_minimal-x86_64.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.ctx_profile-x86_64",
  static_library = "lib/linux/libclang_rt.ctx_profile-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM858",
  shared_library = "lib/gconv/IBM858.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "JIS",
  shared_library = "lib/gconv/libJIS.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "pthread",
  static_library = "lib/libpthread.a",
  shared_library = "lib/libpthread.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM850",
  shared_library = "lib/gconv/IBM850.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM851",
  shared_library = "lib/gconv/IBM851.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM852",
  shared_library = "lib/gconv/IBM852.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "pcprofile",
  shared_library = "lib/libpcprofile.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM855",
  shared_library = "lib/gconv/IBM855.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM856",
  shared_library = "lib/gconv/IBM856.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM857",
  shared_library = "lib/gconv/IBM857.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "m-2.40",
  static_library = "lib/libm-2.40.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "util",
  static_library = "lib/libutil.a",
  shared_library = "lib/libutil.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO-2022-JP-3",
  shared_library = "lib/gconv/ISO-2022-JP-3.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM12712",
  shared_library = "lib/gconv/IBM12712.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.asan-x86_64",
  static_library = "lib/linux/libclang_rt.asan-x86_64.a",
  shared_library = "lib/linux/libclang_rt.asan-x86_64.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "HP-GREEK8",
  shared_library = "lib/gconv/HP-GREEK8.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM866NAV",
  shared_library = "lib/gconv/IBM866NAV.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1399",
  shared_library = "lib/gconv/IBM1399.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1164",
  shared_library = "lib/gconv/IBM1164.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO-IR-197",
  shared_library = "lib/gconv/ISO-IR-197.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1167",
  shared_library = "lib/gconv/IBM1167.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1166",
  shared_library = "lib/gconv/IBM1166.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1161",
  shared_library = "lib/gconv/IBM1161.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1160",
  shared_library = "lib/gconv/IBM1160.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1390",
  shared_library = "lib/gconv/IBM1390.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1163",
  shared_library = "lib/gconv/IBM1163.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1162",
  shared_library = "lib/gconv/IBM1162.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.xray-profiling-x86_64",
  static_library = "lib/linux/libclang_rt.xray-profiling-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP1258",
  shared_library = "lib/gconv/CP1258.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP1256",
  shared_library = "lib/gconv/CP1256.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP1257",
  shared_library = "lib/gconv/CP1257.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP1254",
  shared_library = "lib/gconv/CP1254.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP1255",
  shared_library = "lib/gconv/CP1255.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP1252",
  shared_library = "lib/gconv/CP1252.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP1253",
  shared_library = "lib/gconv/CP1253.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP1250",
  shared_library = "lib/gconv/CP1250.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP1251",
  shared_library = "lib/gconv/CP1251.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "KOI8-RU",
  shared_library = "lib/gconv/KOI8-RU.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "rt",
  static_library = "lib/librt.a",
  shared_library = "lib/librt.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP1125",
  shared_library = "lib/gconv/CP1125.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "c++",
  static_library = "lib/libc++.a",
  shared_library = "lib/libc++.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "c_malloc_debug",
  shared_library = "lib/libc_malloc_debug.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "grcrt1",
  objects = ["lib/grcrt1.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1046",
  shared_library = "lib/gconv/IBM1046.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISOIR165",
  shared_library = "lib/gconv/libISOIR165.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1047",
  shared_library = "lib/gconv/IBM1047.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "Scrt1",
  objects = ["lib/Scrt1.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "pcre2-16",
  shared_library = "lib/libpcre2-16.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "GREEK7-OLD",
  shared_library = "lib/gconv/GREEK7-OLD.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "GEORGIAN-ACADEMY",
  shared_library = "lib/gconv/GEORGIAN-ACADEMY.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "pcreposix",
  shared_library = "lib/libpcreposix.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.cfi_diag-x86_64",
  static_library = "lib/linux/libclang_rt.cfi_diag-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM037",
  shared_library = "lib/gconv/IBM037.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "c++abi",
  static_library = "lib/libc++abi.a",
  shared_library = "lib/libc++abi.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM038",
  shared_library = "lib/gconv/IBM038.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.ubsan_standalone_cxx-x86_64",
  static_library = "lib/linux/libclang_rt.ubsan_standalone_cxx-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.cfi-x86_64",
  static_library = "lib/linux/libclang_rt.cfi-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO8859-9",
  shared_library = "lib/gconv/ISO8859-9.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO8859-8",
  shared_library = "lib/gconv/ISO8859-8.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO8859-9E",
  shared_library = "lib/gconv/ISO8859-9E.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO8859-1",
  shared_library = "lib/gconv/ISO8859-1.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1137",
  shared_library = "lib/gconv/IBM1137.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "crypto",
  shared_library = "lib/libcrypto.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO8859-3",
  shared_library = "lib/gconv/ISO8859-3.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO8859-2",
  shared_library = "lib/gconv/ISO8859-2.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1364",
  shared_library = "lib/gconv/IBM1364.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO8859-5",
  shared_library = "lib/gconv/ISO8859-5.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1132",
  shared_library = "lib/gconv/IBM1132.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO8859-4",
  shared_library = "lib/gconv/ISO8859-4.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1133",
  shared_library = "lib/gconv/IBM1133.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "NATS-DANO",
  shared_library = "lib/gconv/NATS-DANO.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO8859-7",
  shared_library = "lib/gconv/ISO8859-7.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1130",
  shared_library = "lib/gconv/IBM1130.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "KOI-8",
  shared_library = "lib/gconv/KOI-8.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO8859-6",
  shared_library = "lib/gconv/ISO8859-6.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "GBGBK",
  shared_library = "lib/gconv/GBGBK.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "memusage",
  shared_library = "lib/libmemusage.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.xray-fdr-x86_64",
  static_library = "lib/linux/libclang_rt.xray-fdr-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CNS",
  shared_library = "lib/gconv/libCNS.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EBCDIC-UK",
  shared_library = "lib/gconv/EBCDIC-UK.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "png",
  shared_library = "lib/libpng.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EBCDIC-US",
  shared_library = "lib/gconv/EBCDIC-US.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "UNICODE",
  shared_library = "lib/gconv/UNICODE.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "jpeg",
  shared_library = "lib/libjpeg.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM861",
  shared_library = "lib/gconv/IBM861.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM278",
  shared_library = "lib/gconv/IBM278.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM860",
  shared_library = "lib/gconv/IBM860.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "LATIN-GREEK",
  shared_library = "lib/gconv/LATIN-GREEK.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM863",
  shared_library = "lib/gconv/IBM863.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM862",
  shared_library = "lib/gconv/IBM862.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM865",
  shared_library = "lib/gconv/IBM865.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM864",
  shared_library = "lib/gconv/IBM864.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM866",
  shared_library = "lib/gconv/IBM866.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM869",
  shared_library = "lib/gconv/IBM869.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.tsan_cxx-x86_64",
  static_library = "lib/linux/libclang_rt.tsan_cxx-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM868",
  shared_library = "lib/gconv/IBM868.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM273",
  shared_library = "lib/gconv/IBM273.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM274",
  shared_library = "lib/gconv/IBM274.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM275",
  shared_library = "lib/gconv/IBM275.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM277",
  shared_library = "lib/gconv/IBM277.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CWI",
  shared_library = "lib/gconv/CWI.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM921",
  shared_library = "lib/gconv/IBM921.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM922",
  shared_library = "lib/gconv/IBM922.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO-2022-CN",
  shared_library = "lib/gconv/ISO-2022-CN.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ECMA-CYRILLIC",
  shared_library = "lib/gconv/ECMA-CYRILLIC.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "jansson",
  shared_library = "lib/libjansson.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EBCDIC-ES-S",
  shared_library = "lib/gconv/EBCDIC-ES-S.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO_6937-2",
  shared_library = "lib/gconv/ISO_6937-2.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "HP-THAI8",
  shared_library = "lib/gconv/HP-THAI8.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EBCDIC-ES-A",
  shared_library = "lib/gconv/EBCDIC-ES-A.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP772",
  shared_library = "lib/gconv/CP772.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP773",
  shared_library = "lib/gconv/CP773.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO_10367-BOX",
  shared_library = "lib/gconv/ISO_10367-BOX.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP770",
  shared_library = "lib/gconv/CP770.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.lsan-x86_64",
  static_library = "lib/linux/libclang_rt.lsan-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP771",
  shared_library = "lib/gconv/CP771.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP774",
  shared_library = "lib/gconv/CP774.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "CP775",
  shared_library = "lib/gconv/CP775.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "JOHAB",
  shared_library = "lib/gconv/JOHAB.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1097",
  shared_library = "lib/gconv/IBM1097.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "curl",
  shared_library = "lib/libcurl.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO-2022-KR",
  shared_library = "lib/gconv/ISO-2022-KR.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO_6937",
  shared_library = "lib/gconv/ISO_6937.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "MAC-CENTRALEUROPE",
  shared_library = "lib/gconv/MAC-CENTRALEUROPE.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.nsan-x86_64",
  static_library = "lib/linux/libclang_rt.nsan-x86_64.a",
  shared_library = "lib/linux/libclang_rt.nsan-x86_64.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.asan_static-x86_64",
  static_library = "lib/linux/libclang_rt.asan_static-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EUC-JP",
  shared_library = "lib/gconv/EUC-JP.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM9448",
  shared_library = "lib/gconv/IBM9448.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EBCDIC-CA-FR",
  shared_library = "lib/gconv/EBCDIC-CA-FR.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.stats_client-x86_64",
  static_library = "lib/linux/libclang_rt.stats_client-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "UTF-16",
  shared_library = "lib/gconv/UTF-16.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.hwasan_aliases_cxx-x86_64",
  static_library = "lib/linux/libclang_rt.hwasan_aliases_cxx-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "afalg",
  shared_library = "lib/engines-3/afalg.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "clang_rt.safestack-x86_64",
  static_library = "lib/linux/libclang_rt.safestack-x86_64.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO8859-10",
  shared_library = "lib/gconv/ISO8859-10.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO8859-11",
  shared_library = "lib/gconv/ISO8859-11.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1112",
  shared_library = "lib/gconv/IBM1112.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO8859-13",
  shared_library = "lib/gconv/ISO8859-13.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO8859-14",
  shared_library = "lib/gconv/ISO8859-14.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO8859-15",
  shared_library = "lib/gconv/ISO8859-15.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "ISO8859-16",
  shared_library = "lib/gconv/ISO8859-16.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EBCDIC-IT",
  shared_library = "lib/gconv/EBCDIC-IT.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "SHIFT_JISX0213",
  shared_library = "lib/gconv/SHIFT_JISX0213.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "nss_compat",
  shared_library = "lib/libnss_compat.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "Mcrt1",
  objects = ["lib/Mcrt1.o"],
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1147",
  shared_library = "lib/gconv/IBM1147.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1146",
  shared_library = "lib/gconv/IBM1146.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1145",
  shared_library = "lib/gconv/IBM1145.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "BIG5",
  shared_library = "lib/gconv/BIG5.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1144",
  shared_library = "lib/gconv/IBM1144.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1143",
  shared_library = "lib/gconv/IBM1143.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1142",
  shared_library = "lib/gconv/IBM1142.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1141",
  shared_library = "lib/gconv/IBM1141.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1140",
  shared_library = "lib/gconv/IBM1140.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "legacy",
  shared_library = "lib/ossl-modules/legacy.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM437",
  shared_library = "lib/gconv/IBM437.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1149",
  shared_library = "lib/gconv/IBM1149.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "EBCDIC-PT",
  shared_library = "lib/gconv/EBCDIC-PT.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "IBM1148",
  shared_library = "lib/gconv/IBM1148.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "turbojpeg",
  shared_library = "lib/libturbojpeg.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "mcheck",
  static_library = "lib/libmcheck.a",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "PT154",
  shared_library = "lib/gconv/PT154.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "KSC",
  shared_library = "lib/gconv/libKSC.so",
  visibility = ["//visibility:public"],
)

cc_import(
  name = "GEORGIAN-PS",
  shared_library = "lib/gconv/GEORGIAN-PS.so",
  visibility = ["//visibility:public"],
)

# Usr directory filegroup
filegroup(
  name = "sysroot",
  srcs = glob([
    "include/**",
    "lib/**",
  ]),
)

# Include directory filegroup
filegroup(
  name = "include",
  srcs = glob(["include/**"]),
)

# Library directory filegroup
filegroup(
  name = "lib",
  srcs = glob(["lib/**"]),
)

# end
